-------------

UPDATES

* `query_bagging()`: To shorten code, `query_by_bagging()` is now
  `query_bagging()`. Although `query_by_bagging()` still exists, it will be
  deprecated in a future release.

* `query_committee()`: To shorten code, `query_by_committee()` is now
  `query_committee()`. Although `query_by_committee()` still exists, it will be
  deprecated in a future release.

activelearning 0.1
-------------

NEW FEATURES

* First version of the `activelearning` package. With this package, we aim to
  provide tools for the machine-learning paradigm, active learning. Specifically,
  this package is a collection of various active-learning methods from the
  literature for choosing unlabeled observations in a data set to query for their
  true labels. The framework is particularly useful when there are very few
  labeled observations relative to a large number of unlabeled observations, and
  the user seeks to determine as few true labels as possible to achieve highly
  accurate classifiers.  

ACTIVE LEARNING METHODS

* `activelearning()` is a wrapper function that applies our implementation of one
  of several active-learning methods to select observations that should be
  labeled to improve classification performance based on the current data set.

* `uncertainty_sampling()` determines the least certain unlabeled observations,
  which are selected to query for their true classification labels. The user must
  specify a classifier from the 'caret' R package to train a classifier from the
  observations that are already labeled. The trained classifier is then applied
  to the unlabeled observations to determine the least certain ones. We provide
  several methods to estimate the certainty of each observation. By default, the
  entropy of the posterior probabilities of classification is used.

* `query_by_bagging()` is an active-learning method that applies a classifier
  from the 'caret' package to a data set using the bagging paradigm by training