@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/random_query.r
-\name{random_query}
-\alias{random_query}
+% Please edit documentation in R/query-random.r
+\name{query_random}
+\alias{query_random}
 \title{Active Learning with Random Querying}
 \usage{
-random_query(y, num_query = 1)
+query_random(y, num_query = 1)
 }
 \arguments{
 \item{y}{a vector of the classification labels for each observation in a data
